<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditInfoActivity"
    android:padding="6dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_info"
        android:textAllCaps="true"
        android:gravity="center"
        android:padding="20dp"
        android:textSize="24sp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/txtNameUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_newname"
        android:layout_marginBottom="26dp"/>
    <EditText
        android:id="@+id/txtPhoneUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_newphone"
        android:layout_marginBottom="26dp"/>
    <EditText
        android:id="@+id/txtPositionUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_newposition"
        android:layout_marginBottom="26dp"/>
    <EditText
        android:id="@+id/txtDepartmentUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_newdepartment"
        android:layout_marginBottom="26dp"/>
    <Button
        android:id="@+id/btnUpdateInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"/>
</LinearLayout>