<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity"
    android:padding="6dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="20dp"
        android:gravity="center"/>
    <EditText
        android:id="@+id/txtRegisName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:paddingBottom="20dp"/>
    <EditText
        android:id="@+id/txtRegisPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_phone"
        android:paddingBottom="20dp"/>
    <EditText
        android:id="@+id/txtRegisPosition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_position"
        android:paddingBottom="20dp"/>
    <EditText
        android:id="@+id/txtRegisDepartment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_department"
        android:paddingBottom="20dp"/>

    <EditText
        android:id="@+id/txtRegisPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:paddingBottom="20dp" />
    <EditText
        android:id="@+id/txtRegisRePwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_pasword_again"
        android:paddingBottom="20dp" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnRegis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnCancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancle"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>